kill javafx