@@ -1,17 +1,5 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
-/**
- * To set TornadoFX to run properly in IntelliJ:
- *
- * 1) Place the following line in the Run Configuration VM Options
- * --module-path "$JFX_SDK_DIR$\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.base,javafx.graphics
- *
- * Below...seems to work, somehow? without the JFX_SDK_DIR?
- * --module-path "$MODULE_DIR$\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.base,javafx.graphics --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED
- *
- * 2) Define $JFX_SDK_DIR$ in your env variables to the project dir /server/javafx-sdk-11.0.2 (or whatever version)
- */
-
 plugins {
 	kotlin("jvm")
 	application
@@ -20,14 +8,9 @@ plugins {
 	kotlin("plugin.spring") version "1.3.50"
 	kotlin("plugin.jpa") version "1.3.50"
 	id("org.jetbrains.kotlin.plugin.serialization") version "1.3.50"
-	id("org.openjfx.javafxplugin") version "0.0.7"
 	id("com.github.johnrengelman.shadow") version "5.2.0"
 }
 
-javafx {
-	version = "12"
-	modules = listOf("javafx.controls", "javafx.base", "javafx.fxml", "javafx.graphics")
-}
 
 group = "com.mtw"
 version = "0.0.1-SNAPSHOT"
